Modificicación de formilario contacto

--- a/contacto.html
+++ b/contacto.html
@@ -20,15 +20,15 @@
         </div>
     </header>
     <main>                
-        <form>
-            <label for="nombreapellido">Nombre(es) y Apellido(os)</label>
-            <input type="text" id="nombreapellido" class="input-padron" required>
+        <form action="https://formsubmit.co/fasym32@gmail.com" method="POST">
+            <label for="name">Nombre(es) y Apellido(os)</label>
+            <input type="text" name= "name" id="name" class="input-padron" placeholder="Nombre" required>
             
             <label for="correoelectronico"> Corrreo Electrónico</label>
-            <input type="email" id="correoelectronico" class="input-padron" required placeholder="email@dominio.com">
+            <input type="email"name="email" id="correoelectronico" class="input-padron" required placeholder="email@dominio.com">
 
             <label for="telefono"> Telefono</label>
-            <input type="tel" id="telefono" class="input-padron" required placeholder="(XXX)XXXX XXX">
+            <input type="tel" id="telefono"name= "phone" class="input-padron" required placeholder="(XXX)XXXX XXX">
 
             <label for="mensaje">Mensaje</label>
             <textarea cols="70" rows="10" id="mensaje" class="input-padron"required></textarea>
@@ -52,7 +52,7 @@
               </select>
              </fieldset>
 
-            <label class="checkbox"><input type="checkbox" checked>Le gustaría recibir novedades de la Barbería Alura?</label>
+            <label class="checkbox"><input type="checkbox" checked>Le gustaría recibir novedades de Grupo Fasym?</label>
             <input type="submit" value="Enviar formulario" class="enviar">
 
         </form>
@@ -77,8 +77,8 @@
       </main>
     <footer>
      
-        <img src="Trabajo/logo.jpg.png" alt="Logo de La Barbería de Alura">
-        <p class="copyright"> &copy Copyright Barbería Alura -2020</p>
+        <img src="Trabajo/logo.jpg.png" alt="Logo de Grupo Fasym">
+        <p class="copyright"> &copy Copyright Gruppo Fasym -2023</p>
 
       </footer>
   </body>
