--- a/contacto.html
+++ b/contacto.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Porductos - Fasym</title>
+    <title>Contacto - Fasym</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -13,7 +13,7 @@
               <nav>
                 <ul>
                     <li><a href="index.html">Home</a> </li>
-                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="Fasym Productos.html">Productos</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                   </ul>
               </nav>
