Modificando funcion de submit email

--- a/contacto.html
+++ b/contacto.html
@@ -22,16 +22,16 @@
     <main>                
         <form action="https://formsubmit.co/fasym32@gmail.com" method="POST">
             <label for="name">Nombre(es) y Apellido(os)</label>
-            <input type="text" name= "name" id="name" class="input-padron" placeholder="Nombre" required>
+            <input type="text" name="name" id="name" class="input-padron" placeholder="Nombre" required>
             
             <label for="correoelectronico"> Corrreo Electrónico</label>
-            <input type="email"name="email" id="correoelectronico" class="input-padron" required placeholder="email@dominio.com">
+            <input type="email" name="email" id="correoelectronico" class="input-padron" required placeholder="email@dominio.com">
 
             <label for="telefono"> Telefono</label>
-            <input type="tel" id="telefono"name= "phone" class="input-padron" required placeholder="(XXX)XXXX XXX">
+            <input type="tel" id="telefono" name="phone" class="input-padron" required placeholder="(XXX)XXXX XXX">
 
             <label for="mensaje">Mensaje</label>
-            <textarea cols="70" rows="10" id="mensaje" class="input-padron"required></textarea>
+            <textarea cols="70" rows="10" name="mensaje" id="mensaje" class="input-padron"required></textarea>
              <fieldset>
                 <legend>¿Cómo le gustaría que lo contáctemos?
                     
