Cambio de correo electonico para contacto

--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <main>                
-        <form action="https://formsubmit.co/fasym32@gmail.com" method="POST">
+        <form action="https://formsubmit.co/edge32slash@Gmail.com" method="POST">
             <label for="name">Nombre(es) y Apellido(os)</label>
             <input type="text" name="name" id="name" class="input-padron" placeholder="Nombre" required>
             
