--- a/contacto.html
+++ b/contacto.html
@@ -32,6 +32,8 @@
 
             <label for="mensaje">Mensaje</label>
             <textarea cols="70" rows="10" name="mensaje" id="mensaje" class="input-padron"required></textarea>
+            <input type="hidden" name="next" value="https://uri32.github.io/Fasym.github.io/index.html">
+            <input type="hidden" name="_captcha" value="false">
              <fieldset>
                 <legend>¿Cómo le gustaría que lo contáctemos?
                     
