--- a/contacto.html
+++ b/contacto.html
@@ -32,7 +32,7 @@
 
             <label for="mensaje">Mensaje</label>
             <textarea cols="70" rows="10" name="mensaje" id="mensaje" class="input-padron"required></textarea>
-            <input type="hidden" name="next" value="https://uri32.github.io/Fasym.github.io/index.html">
+            <input type="hidden" name="_next" value="https://uri32.github.io/Fasym.github.io/index.html">
             <input type="hidden" name="_captcha" value="false">
              <fieldset>
                 <legend>¿Cómo le gustaría que lo contáctemos?
@@ -41,7 +41,7 @@
 
                     <label for="radio-telefono"><input type="radio" name="contacto" value="telefono"id="radio-telefono">Telefono</label>
             
-                    <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp"id="radio-whatsapp" checked> WhatsApp</label>
+                    <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp"id="radio-whatsapp"> WhatsApp</label>
             
                 </legend>
              </fieldset>
