Mejorando pagina de Recamara y Carrusel 2.2

--- a/Recamara.html
+++ b/Recamara.html
@@ -11,7 +11,7 @@
 
 </head>
 <body class="Carrusel">
-     
+    <a href="Fasym Productos.html" class="btn"><h1>Regreso</h1></a>
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
