Mejorando pagina de Cocina

--- a/Fasym Productos.html
+++ b/Fasym Productos.html
@@ -45,7 +45,7 @@
           </li>
 
           <li>
-            <h2>Muebles de Cocina</h2>
+            <a href="Cocina.html"><h2>Muebles de Cocina</h2></a>
             <img class="redimension" src="Trabajo/Mueble cocina.jpg">
             <p class="producto-descripcion">Mueble para Electrodomesticos</p>
             <p class="producto-precio"> Medidas: 100x40x80cm</p>
