Mejorando Pagina Home

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <section class="principal">
          <h2 class="titulo-principal">Sobre Fasym</h2>
          <img class="soldador" src="Trabajo/soldador.jpg">
-         <p>Nos dedicamos a fabricar y realizar proyectos tanto industriales como domesticos en <strong>Fasym</strong> estamos convencidos que la calidad la puedes encontrar en cualquier clase de trabajo, no importa que tan grande o pequeño sea.</p>
-         <p id="mision"><em>Nuestra mision es:<strong> Llevar a cabo todos los diseños que mejoren tu hogar, tu negocio o tu empresa, siempre teniendo un equilibrio entre estetica y calidad</strong>.</em></p>
-         <p>Ofrecemos un trato personalizado desde el diseño de tu proyecto, hasta el resultado final, dandote opciones practicas, esteticas y funcionales, siempre respetano la escencia del mismo.</p>
+         <p>Nos dedicamos a fabricar y realizar proyectos tanto industriales como domesticos de Herreria, Carpinteria y Mantanimiento en <strong>FASYM (Fabricación Soluciones Y Mantanimiento)</strong> estamos convencidos que la calidad la puedes encontrar en cualquier clase de trabajo, no importa que tan grande o pequeño sea.</p>
+         <p id="mision"><em>Nuestra mision es:<strong> Llevar a cabo todos los diseños que mejoren tu hogar, negocio o  empresa, siempre teniendo un equilibrio entre estetica y calidad</strong>.</em></p>
+         <p>Ofrecemos un trato personalizado desde el diseño de tu proyecto, hasta el resultado final, dandote opciones practicas, esteticas y funcionales, siempre respetando la escencia del mismo.</p>
       </section>
       
       <section class="mapa">
