Mejorando paginas Mueble tv, Jardin, Repisas,Añadido muebles de baño

--- a/Recamara.html
+++ b/Recamara.html
@@ -38,6 +38,12 @@
             <div class="swiper-slide">
                 <img src="Trabajo/Screenshot_2023-02-18-19-50-18-077_com.facebook.katana.jpg" alt="">
             </div>
+            <div class="swiper-slide">
+                <img src="Trabajo/Closet Estilo Industrial.jpg" alt="">
+            </div>
+            <div class="swiper-slide">
+                <img src="Trabajo/Zapatera.jpg" alt="">
+            </div>
 
         </div>
 
