Mejorando Home,Productos,Contacto

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
      </main>
      <footer>
-        <img src="Trabajo/logo.jpg.png">
+        <img class="logo" src="Trabajo/logo.jpg.png">
         <p class="copyright">&copy Copyright FASYM-2023</p>
   
       </footer>
