--- a/Fasym Productos.html
+++ b/Fasym Productos.html
@@ -15,7 +15,7 @@
     <header>
       <div class="caja">
 
-        <h1 ><img  src="Trabajo/logo.jpg.png"></h1>
+        <h1 ><img class="logo" src="Trabajo/logo.jpg.png"></h1>
           <nav>
             <ul>
                 <li><a href="index.html">Home</a> </li>
@@ -28,7 +28,7 @@
       </div>
     </header>
     
-    <main>
+    <main class="centro">
        <ul class="productos">
           <li>
             <a href="Recamara.html"><h2>Muebles de Recamara</h2></a>
@@ -77,7 +77,7 @@
     </main>
     
     <footer>
-      <img src="Trabajo/logo.jpg.png">
+      <img class="logo" src="Trabajo/logo.jpg.png">
       <p class="copyright">&copy Copyright FASYM-2023</p>
 
     </footer>
