--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
   <body>
     <header>
         <div class="caja">
-            <h1><img src="Trabajo/logo.jpg.png" alt="logo productos fasym"></h1>
+            <h1><img class="logo" src="Trabajo/logo.jpg.png" alt="logo productos fasym"></h1>
               <nav>
                 <ul>
                     <li><a href="index.html">Home</a> </li>
@@ -68,7 +68,7 @@
            </table>
       </main>
     <footer>
-        <img src="Trabajo/logo.jpg.png" alt="Logo de Grupo Fasym">
+        <img class="logo" src="Trabajo/logo.jpg.png" alt="Logo de Grupo Fasym">
         <p class="copyright"> &copy Copyright Gruppo Fasym -2023</p>
       </footer>
   </body>
