Se añade seccion mesas

--- a/Fasym Productos.html
+++ b/Fasym Productos.html
@@ -72,6 +72,13 @@
             <p class="producto-descripcion">Porta Toallas</p>
             <p class="producto-precio"> Medidas: 100cm x 40cm</p>
           </li>
+
+          <li>
+            <a href="Mesas.html"><h2>Mesas</h2></a>
+            <img class="redimension" src="Trabajo/MesaCentro.png">
+            <p class="producto-descripcion">Mesa de centro</p>
+            <p class="producto-precio"> Medidas: 90cm x 60cm x 40cm</p>
+          </li>
        </ul>
 
     </main>
